deployment/k8s/coin-check/coin-check.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coin-check
spec:
  selector:
    matchLabels:
      app: coin-check
  replicas: 1
  template:
    metadata:
      labels:
        app: coin-check
    spec:
      containers:
      - name: coin-check
        image: 198760508209.dkr.ecr.eu-west-3.amazonaws.com/coin-check:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: reg-aws
