deployment/k8s/coin-check/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coin-check
spec:
  type: LoadBalancer
  selector:
    app: coin-check
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
