deployment/k8s/coin-check/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-coin-check
spec:
  rules:
    - host: hello.coin-check.com 
      http:
        paths:
        - pathType: Prefix
          path: /current
          backend:
            service:
              name: coin-check
              port:
                number: 8080
        - pathType: Prefix
          path: /average
          backend:
            service:
              name: coin-check
              port:
                number: 8080
  ingressClassName: nginx
