deployment/k8s/coin-check/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels: 
          app.kubernetes.io/instance: nginx-ingress-controller
  egress:
  - from:
    - podSelector:
        matchLabels: 
          app.kubernetes.io/instance: nginx-ingress-controller
